--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,16 @@
     <div class="form-row">
         <div class="form-group col-md-6">
             {{ form.csrf_token() }}
-            <label for=""> {{ form.username.label }}</label>
-            {{ form.username }}
+            <label for=""> {{ form.username1.label }}</label>
+            {{ form.username1 }}
         </div>
         <div class="form-group">
             {{ form.submit(class="btn btn-primary")}}
+        </div>
+        <div class="form-group col-md-6">
+            {{ form.csrf_token() }}
+            <label for=""> {{ form.username2.label }}</label>
+            {{ form.username2 }}
         </div>
     </div>
 </form>
